# doc-img-classification

./: .gitignore  README.md  gen_dataset.ipynb  notes.txt  pyproject.toml  sampling.py  train_dataset.ipynb
.ipynb_checkpoints/: gen_dataset-checkpoint.ipynb  train_dataset-checkpoint.ipynb
data/invoice/: 1001608582_1001608584.tif  2028719674_2028719675.tif  2049433549.tif  2063610199.tif  518476441+-6444.tif
data/other/: 0000053258.tif  0000074415.tif  0000074449.tif  0000108249.tif  0000129308.tif  0000134293.tif  0000155698.tif  0000164575.tif  0000202399.tif  0000244527.tif  0000340555.tif  0000341563.tif  0000349202.tif  0000412732.tif  0000446723.tif  0000483972.tif  0000553788.tif  0000619138.tif  0000718161.tif  0000946360.tif  0000953239.tif  0000957974.tif  0000969514.tif  0000998659.tif  0001170896.tif  0001202299.tif  0001217009.tif  0001222534.tif  0001229324.tif  0001231579.tif  0001236869.tif  0001254906.tif  0001431843.tif  0001433977.tif  0001478080.tif  0001480322.tif  0011843456.tif  0011857025.tif  0011860525.tif  0011915268.tif  (+515 more)
data_oversampled/: metadata.csv
data_oversampled/invoice/: 0000542613_6.tif  0001135043_8.tif  0001136764_9.tif  0001139801_3.tif  0001144242_27.tif  0001453118_1.tif  0011839476_17.tif  0013043247_13.tif  0013122099_6.tif  0060031707_1.tif  0060031731_15.tif  0060051297_17.tif  0060060478_0.tif  0060091484_27.tif  0060211529_2.tif  01145155_17.tif  03652096_1.tif  03660892_0.tif  03724720_13.tif  03755841_4.tif  10382523_12.tif  2001205647_18.tif  (+99 more)
terraform-provider-paperspace/: main.tf
util/: df_func.py  file_func.py
(+1293 files in other folders)
