[tool.poetry]
name = "doc-img-classification"
version = "0.1.0"
description = ""
authors = ["juanrojas <jnm.ronquillo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
transformers = "^4.43.2"
datasets = "^2.20.0"
evaluate = "^0.4.2"
numpy = "1.26.4"
accelerate = "^0.33.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
